--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 IPBA 13/~$insurance_claims.xlsx
 IPBA 13/Titanic/titanic_train.xlsx
 IPBA 13/Titanic/~$titanic_train.xlsx
+IPBA 13/Titanic/.RData
+IPBA 13/Titanic/.Rhistory
+IPBA 13/Titanic/.Rhistory
+IPBA 13/Titanic/.RData
