--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ IPBA 13/Titanic/.RData
 IPBA 13/Titanic/.Rhistory
 IPBA 13/Titanic/.Rhistory
 IPBA 13/Titanic/.RData
+IPBA 17/.RData
+IPBA 17/.Rhistory
